--- a/portfolio/Shop/app/css/catalog.css
+++ b/portfolio/Shop/app/css/catalog.css
@@ -24,16 +24,17 @@
       -ms-flex-flow: row wrap;
           flex-flow: row wrap;
   margin-left: -1px;
-  margin-top: -1px; }
+  margin-top: -1px;
+  margin-right: -1px;
+  -webkit-box-pack: start;
+  -webkit-justify-content: flex-start;
+      -ms-flex-pack: start;
+          justify-content: flex-start; }
 
 .catalog .catalog_content .block {
   padding: 20px;
-  -webkit-box-flex: 2;
-  -webkit-flex: 2 2 100px;
-      -ms-flex: 2 2 100px;
-          flex: 2 2 100px;
   border: 1px solid #dae2ee;
-  width: 33.333333%;
+  width: 33.45%;
   margin-right: -1px;
   max-height: 489px;
   margin-bottom: -1px;
@@ -42,6 +43,8 @@
   .catalog .catalog_content .block:hover {
     border-color: #ff6a00;
     z-index: 3; }
+  .catalog .catalog_content .block .title img {
+    width: 100%; }
   .catalog .catalog_content .block .title .availability {
     font: 1.2em "RobotoRegular";
     color: #00a453;
@@ -302,6 +305,9 @@
     -webkit-justify-content: space-between;
         -ms-flex-pack: justify;
             justify-content: space-between;
+    -webkit-flex-wrap: nowrap;
+        -ms-flex-wrap: nowrap;
+            flex-wrap: nowrap;
     padding: 28px 0;
     padding-bottom: 10px; }
     .catalog .catalog_content .advant .advant_content .blocks .block_advant p.top {
@@ -383,3 +389,66 @@
     .catalog .catalog_content .seo .seo_content p {
       font: 1.4em "RobotoRegular";
       line-height: 160%; }
+
+@media screen and (max-width: 992px) {
+  .catalog .catalog_content .block {
+    width: 50%; }
+  .catalog .catalog_content .question .question_content .title a {
+    min-width: 90px; }
+  .catalog .catalog_content .question {
+    padding-top: 0px; }
+  .catalog .catalog_content .question .question_content .title p {
+    padding-top: 16px; }
+  .catalog .catalog_content .question .question_content .title {
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .catalog .catalog_content .search .search_content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  .catalog .catalog_content .search .search_content ul {
+    padding-bottom: 30px; }
+  .catalog .catalog_content .search .search_content .title p {
+    font-size: 1.6em; }
+  .catalog .catalog_content .advant .advant_content .title p {
+    font-size: 1.6em; }
+  .catalog .catalog_content h3 {
+    font-size: 2em; }
+  .catalog .catalog_content .advant .advant_content .blocks {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -webkit-flex-flow: row wrap;
+        -ms-flex-flow: row wrap;
+            flex-flow: row wrap;
+    padding-bottom: 0; }
+  .catalog .catalog_content .advant .advant_content .blocks .block_advant {
+    width: 50%;
+    margin-bottom: 15px; }
+  .catalog .catalog_content .seo .seo_content {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+    -webkit-align-items: center;
+        -ms-flex-align: center;
+            align-items: center; }
+  .catalog .catalog_content .seo .seo_content p {
+    padding-top: 15px; } }
+
+@media screen and (max-width: 479px) {
+  .catalog .catalog_content .block {
+    width: 100%;
+    max-height: 1000px; }
+  .catalog .catalog_content .tags .carousel {
+    max-width: 80%; }
+  .catalog .catalog_content .advant .advant_content .blocks .block_advant {
+    width: 100%;
+    margin-bottom: 37px; }
+  .catalog .catalog_content .question .question_content ul a {
+    margin-bottom: 10px; } }
