--- a/portfolio/Shop/app/scss/catalog.scss
+++ b/portfolio/Shop/app/scss/catalog.scss
@@ -17,12 +17,14 @@
             flex-flow: row wrap;
             margin-left: -1px;
             margin-top: -1px;
+            margin-right: -1px;
+            justify-content: flex-start;
         }
         .block {
             padding: 20px;
-            flex: 2 2 100px;
+            //flex-grow: 1;
             border: 1px solid #dae2ee;
-            width: 33.333333%;
+            width: 33.45%;
             margin-right: -1px;
             max-height: 489px;
             margin-bottom: -1px;
@@ -33,6 +35,9 @@
                 z-index: 3;
             }
             .title {
+            	img {
+            		width: 100%;
+            	}
                 .availability {
                     font: 1.2em "RobotoRegular";
                     color: #00a453;
@@ -280,6 +285,7 @@
                 .blocks {
                     display: flex;
                     justify-content: space-between;
+                    flex-wrap: nowrap;
                     padding: 28px 0;
                     padding-bottom: 10px;
                     .block_advant {
@@ -372,5 +378,75 @@
             	}
             }
         }
+    }
+}
+
+
+@media screen and (max-width: 992px) {
+	.catalog .catalog_content .block {
+		width: 50%;
+	}
+	.catalog .catalog_content .question .question_content .title a {
+		min-width: 90px;
+	}
+	.catalog .catalog_content .question {
+		padding-top: 0px;
+	}
+	.catalog .catalog_content .question .question_content .title p {
+		padding-top: 16px;
+	}
+	.catalog .catalog_content .question .question_content .title {
+		align-items: center;
+	}
+	.catalog .catalog_content .search .search_content {
+	flex-direction: column;
+	}
+.catalog .catalog_content .search .search_content ul {
+	padding-bottom: 30px;
+}
+.catalog .catalog_content .search .search_content .title p {
+	font-size: 1.6em;
+}
+.catalog .catalog_content .advant .advant_content .title p {
+	font-size: 1.6em;
+}
+.catalog .catalog_content h3 {
+	font-size: 2em;
+}
+.catalog .catalog_content .advant .advant_content .blocks {
+        flex-flow: row wrap;
+        padding-bottom: 0;
+    }
+    .catalog .catalog_content .advant .advant_content .blocks .block_advant {
+        width: 50%;
+        margin-bottom: 15px;
+    }
+    .catalog .catalog_content .seo .seo_content {
+    	flex-direction: column;
+    	align-items: center;
+    }
+    .catalog .catalog_content .seo .seo_content p {
+    	padding-top: 15px;
+    }
+}
+
+
+
+@media screen and (max-width: 479px) {
+	.catalog .catalog_content .block {
+		width: 100%;
+		max-height: 1000px;
+	}
+	.catalog .catalog_content .tags .slide a {
+	}
+	.catalog .catalog_content .tags .carousel {
+		max-width: 80%;
+	}
+	.catalog .catalog_content .advant .advant_content .blocks .block_advant {
+        width: 100%;
+        margin-bottom: 37px;
+    }
+    .catalog .catalog_content .question .question_content ul a {
+    	margin-bottom: 10px;
     }
 }
