--- a/portfolio/Shop/app/scss/common.scss
+++ b/portfolio/Shop/app/scss/common.scss
@@ -476,6 +476,7 @@ form {
                     padding-left: 4%;
                     margin-bottom: 2px;
                     cursor: default;
+                    white-space: nowrap;
                 }
             }
             .tab_content {
