--- a/portfolio/Shop/app/scss/_media.scss
+++ b/portfolio/Shop/app/scss/_media.scss
@@ -27,7 +27,10 @@
   #nav {
   	display: none;
   }
-   #header .container {
+  .numbers .btn {
+  	display: none;
+  }
+  #header .container {
   	height: 58px;
   }
   .numbers .numbers_content .p2 {
