--- a/portfolio/Shop/app/scss/common.scss
+++ b/portfolio/Shop/app/scss/common.scss
@@ -153,7 +153,7 @@ form {
             margin-top: 0px;
         }
     }
-    a {
+    .btn {
         display: block;
         width: 160px;
         height: 24px;
