--- a/portfolio/Shop/app/scss/_fonts.scss
+++ b/portfolio/Shop/app/scss/_fonts.scss
@@ -3,5 +3,7 @@
 @include font-face("AssistantBold", "../fonts/Assistant/AssistantBold");
 @include font-face("RobotoRegular", "../fonts/Roboto/RobotoRegular/RobotoRegular");
 @include font-face("RobotoBold", "../fonts/Roboto/RobotoBold/RobotoBold");
+@include font-face("Robotolight", "../fonts/Roboto/RobotoLight/RobotoLight");
 @include font-face("ArialBold", "../fonts/Arial/ArialBold/ArialBold");
 @include font-face("ArialRegular", "../fonts/Arial/ArialRegular/ArialRegular");
+@include font-face("OpenSansRegular", "../fonts/OpenSans/OpenSansRegular/OpenSansRegular");
