--- a/portfolio/Shop/app/scss/libs.scss
+++ b/portfolio/Shop/app/scss/libs.scss
@@ -2,6 +2,9 @@
 @import "../libs/bootstrap/scss/bootstrap-reboot.scss";
 @import "../libs/bootstrap/scss/bootstrap-grid.scss";
 @import "../libs/bootstrap/scss/utilities/_sizing.scss";
+@import "../libs/slick-1.8.1/slick/slick.scss";
+@import "../libs/slick-1.8.1/slick/slick-theme.scss";
+@import "../libs/magnific/magnific-popup.css";
 @import "../libs/OwlCarousel2-2.3.4/owl.carousel.css";
 @import "../libs/OwlCarousel2-2.3.4/owl.theme.default.css";
 
