--- a/portfolio/Shop/app/css/libs.css
+++ b/portfolio/Shop/app/css/libs.css
@@ -7,8 +7,6 @@
  * Forked from Normalize.css, licensed MIT (https://github.com/necolas/normalize.css/blob/master/LICENSE.md)
  */
 @import url(../libs/magnific/magnific-popup.css);
-@import url(../libs/OwlCarousel2-2.3.4/owl.carousel.css);
-@import url(../libs/OwlCarousel2-2.3.4/owl.theme.default.css);
 *,
 *::before,
 *::after {
@@ -2382,7 +2380,7 @@ html {
 
 .slick-dots {
   position: absolute;
-  bottom: -25px;
+  bottom: -35px;
   list-style: none;
   display: block;
   text-align: center;
@@ -2401,8 +2399,8 @@ html {
       border: 0;
       background: transparent;
       display: block;
-      height: 20px;
-      width: 20px;
+      height: 16px;
+      width: 16px;
       outline: none;
       line-height: 0px;
       font-size: 0px;
@@ -2417,17 +2415,19 @@ html {
         position: absolute;
         top: 0;
         left: 0;
-        content: "•";
-        width: 20px;
-        height: 20px;
+        content: "";
+        width: 16px;
+        height: 16px;
+        -webkit-border-radius: 8px;
+                border-radius: 8px;
         font-family: "slick";
         font-size: 6px;
         line-height: 20px;
         text-align: center;
-        color: black;
+        background: black;
         opacity: 0.25;
         -webkit-font-smoothing: antialiased;
         -moz-osx-font-smoothing: grayscale; }
     .slick-dots li.slick-active button:before {
-      color: black;
+      background: black;
       opacity: 0.75; }
