--- a/portfolio/Barbershop/app/scss/_media.scss
+++ b/portfolio/Barbershop/app/scss/_media.scss
@@ -24,7 +24,7 @@
 	   body {
 	  	font-size: 3px;
 	  }
-	  #navigation ul {
+	  #navigation {
 	  	margin-top: 37em;
 	  }
 	  #navigation a {
@@ -60,7 +60,7 @@
 	  #navigation a {
 	  	font-size: 7em;
 	  }
-	  #navigation ul {
+	  #navigation {
 	  	margin-top: 42em;
 	  }
 }
@@ -102,6 +102,7 @@
        z-index: 100;
        background: #101011;
        left: -100%;
+       margin-top: 0;
     }
     #navigation ul {
     	flex-direction: column;
