--- a/portfolio/Barbershop/app/scss/common.scss
+++ b/portfolio/Barbershop/app/scss/common.scss
@@ -3,11 +3,17 @@
 #wrapper {
     position: relative;
     background: #101011;
+    height: 100%;
+}
+
+html {
+	height: 100%;
 }
 
 
 body {
     font-size: 10px;
+    height: 100%;
 }
 .body_active {
 	overflow: hidden;
