--- a/portfolio/Barbershop/app/css/common.css
+++ b/portfolio/Barbershop/app/css/common.css
@@ -24,10 +24,15 @@
 
 #wrapper {
   position: relative;
-  background: #101011; }
+  background: #101011;
+  height: 100%; }
+
+html {
+  height: 100%; }
 
 body {
-  font-size: 10px; }
+  font-size: 10px;
+  height: 100%; }
 
 .body_active {
   overflow: hidden; }
@@ -306,7 +311,3 @@ p {
     top: 25px; }
   #wrapper {
     min-height: 300px; } }
-
-@media screen and (max-height: 480px) {
-  #navigation ul {
-    padding: 50px 0; } }
