--- a/portfolio/Barbershop/app/css/main.css
+++ b/portfolio/Barbershop/app/css/main.css
@@ -1,8 +1,9 @@
 #home {
   position: relative;
-  z-index: 2; }
+  z-index: 2;
+  height: 100%; }
   #home .container {
-    height: 100vh; }
+    height: 100%; }
 
 .bg_page_home {
   width: 100%;
@@ -371,19 +372,6 @@
         font: 5.3em "BebasNeueRegular";
         color: #fff;
         cursor: pointer;
-        display: -webkit-box;
-        display: -webkit-flex;
-        display: -ms-flexbox;
-        display: flex;
-        -webkit-box-orient: vertical;
-        -webkit-box-direction: normal;
-        -webkit-flex-direction: column;
-            -ms-flex-direction: column;
-                flex-direction: column;
-        -webkit-box-align: center;
-        -webkit-align-items: center;
-            -ms-flex-align: center;
-                align-items: center;
         position: relative; }
         #home .container .tab_name .tab_names p span {
           display: block;
@@ -394,6 +382,8 @@
           height: 0.7em;
           width: 0.7em;
           bottom: -1em;
+          left: 50%;
+          margin-left: -0.35em;
           display: none; }
       #home .container .tab_name .tab_names .active span {
         display: block; }
@@ -404,19 +394,19 @@
         margin: 0 3em; }
 
 @media screen and (max-width: 9999px) {
-  #home .container {
+  #home .container, html {
     min-height: 2092px; } }
 
 @media screen and (max-width: 3500px) {
-  #home .container {
+  #home .container, html {
     min-height: 1260px; } }
 
 @media screen and (max-width: 2260px) {
-  #home .container {
+  #home .container, html {
     min-height: 996px; } }
 
 @media screen and (max-width: 1680px) {
-  #home .container {
+  #home .container, html {
     min-height: 620px; }
   #home .container .tab_content .home_page .tab_content_block .number {
     padding-top: 0.1em; }
@@ -428,7 +418,7 @@
     padding-top: 2em; } }
 
 @media screen and (max-width: 1365px) {
-  #home .container {
+  #home .container, html {
     min-height: 640px; }
   #home .container .tab_content .home_page .bg_tab {
     width: 95%;
@@ -442,15 +432,15 @@
 @media screen and (max-width: 1023px) {
   #home .container .tab_name .tab_names p {
     font-size: 7em; }
-  #home .container {
+  #home .container, html {
     min-height: 576px; } }
 
 @media screen and (max-width: 767px) {
-  #home .container {
+  #home .container, html {
     min-height: 400px; } }
 
 @media screen and (max-width: 567px) {
-  #home .container {
+  #home .container, html {
     min-height: 568px; }
   #home .container .tab_content .moscow_page .tab_content_block .number,
   #home .container .tab_content .spb_page .tab_content_block .number,
