--- a/portfolio/Barbershop/app/css/main.css
+++ b/portfolio/Barbershop/app/css/main.css
@@ -489,7 +489,7 @@
   #home .container .tab_content .reg_page .tab_content_block h2 {
     letter-spacing: 0.7em;
     margin-bottom: 2em;
-    padding-top: 3em; }
+    padding-top: 0em; }
   #home .container .tab_content .moscow_page .tab_content_block .number .right .more,
   #home .container .tab_content .spb_page .tab_content_block .number .right .more,
   #home .container .tab_content .reg_page .tab_content_block .number .right .more {
@@ -534,4 +534,14 @@
     margin: 0;
     -webkit-align-self: center !important;
         -ms-flex-item-align: center !important;
-            align-self: center !important; } }
+            align-self: center !important; }
+  #home .container .tab_name .top {
+    letter-spacing: 2em;
+    padding-left: 2em;
+    font-size: 8em; }
+  #home .container .tab_name .tab_names p {
+    font-size: 12em; }
+  #home .container .tab_name .tab_names .line {
+    width: 10em; }
+  body {
+    overflow: hidden; } }
