--- a/portfolio/Barbershop/app/scss/main.scss
+++ b/portfolio/Barbershop/app/scss/main.scss
@@ -417,6 +417,9 @@
         flex-direction: column;
         align-items: center;
      }
+     #home .container .tab_content .moscow_page .tab_content_block .number .top, #home .container .tab_content .spb_page .tab_content_block .number .top, #home .container .tab_content .reg_page .tab_content_block .number .top {
+        padding-bottom: 0.25em;
+     }
      #home .container .tab_content .moscow_page .tab_content_block .number .left p .left_item, #home .container .tab_content .moscow_page .tab_content_block .number .right p .left_item, #home .container .tab_content .spb_page .tab_content_block .number .left p .left_item, #home .container .tab_content .spb_page .tab_content_block .number .right p .left_item, #home .container .tab_content .reg_page .tab_content_block .number .left p .left_item, #home .container .tab_content .reg_page .tab_content_block .number .right p .left_item {
         font-size: 8em;
      }
@@ -445,6 +448,8 @@
        }
        #home .container .tab_content .home_page .tab_content_block h2 {
         line-height: 170%;
+        font-size: 13em;
+        padding-top: 0;
        }
        #home .container .tab_content .moscow_page .tab_content_block h2,
         #home .container .tab_content .spb_page .tab_content_block h2,
@@ -511,5 +516,9 @@
           }
           body {
             overflow: hidden;
+          }
+          #wrapper {
+             position: fixed;
+             width: 100%;
           }
 }
