--- a/portfolio/Barbershop/app/scss/_media.scss
+++ b/portfolio/Barbershop/app/scss/_media.scss
@@ -98,7 +98,7 @@
     	display: block;
     }  
     #navigation {
-       min-height: 100vh;
+       min-height: 100%;
        background: #101011;
        left: -100%;
        margin-top: 0;
