--- a/portfolio/Barbershop/app/css/common.css
+++ b/portfolio/Barbershop/app/css/common.css
@@ -276,7 +276,7 @@ p {
   .nav-btn {
     display: block; }
   #navigation {
-    min-height: 100vh;
+    min-height: 100%;
     background: #101011;
     left: -100%;
     margin-top: 0;
