--- a/portfolio/Barbershop/app/css/common.css
+++ b/portfolio/Barbershop/app/css/common.css
@@ -22,6 +22,12 @@
   font-style: normal;
   src: url("../fonts/Bebas/BebasBold/BebasBold.ttf") format("truetype"); }
 
+@font-face {
+  font-family: "RobotoRegular";
+  font-weight: normal;
+  font-style: normal;
+  src: url("../fonts/Roboto/RobotoRegular/RobotoRegular.ttf") format("truetype"); }
+
 #wrapper {
   position: relative;
   background: #101011;
