--- a/portfolio/Barbershop/app/scss/_fonts.scss
+++ b/portfolio/Barbershop/app/scss/_fonts.scss
@@ -4,3 +4,4 @@
 @include font-face("BebasNeueLight", "../fonts/Bebas/BebasLight/BebasLight");
 @include font-face("BebasNeueRegular", "../fonts/Bebas/BebasRegular/BebasRegular");
 @include font-face("BebasNeueBold", "../fonts/Bebas/BebasBold/BebasBold");
+@include font-face("RobotoRegular", "../fonts/Roboto/RobotoRegular/RobotoRegular");
