--- a/portfolio/Barbershop/app/scss/main.scss
+++ b/portfolio/Barbershop/app/scss/main.scss
@@ -541,7 +541,7 @@
              position: relative;
           }
           body {
-            overflow: visible;
+            overflow: hidden;
           }
     }
 
