--- a/portfolio/Barbershop/app/css/main.css
+++ b/portfolio/Barbershop/app/css/main.css
@@ -560,8 +560,8 @@
   #home .container .tab_content .moscow_page .tab_content_block .number .right .more, #home .container .tab_content .spb_page .tab_content_block .number .right .more {
     padding-top: 1em; } }
 
-@media screen and (max-height: 568px) {
+@media screen and (max-width: 567px) and (max-height: 568px) {
   #wrapper {
     position: relative; }
   body {
-    overflow: hidden; } }
+    overflow: visible; } }
