--- a/portfolio/Barbershop/app/scss/main.scss
+++ b/portfolio/Barbershop/app/scss/main.scss
@@ -408,6 +408,7 @@
 }
 
 @media screen and (max-width: 567px) {
+
     #home .container, html {
         min-height: 568px;
     }
@@ -534,14 +535,14 @@
         #home .container .tab_content .moscow_page .tab_content_block .number .right .more, #home .container .tab_content .spb_page .tab_content_block .number .right .more {
              padding-top: 1em;
         }
-}
-
-@media screen and (max-height: 568px) {
+        @media screen and (max-height: 568px) {
     #wrapper {
              position: relative;
           }
           body {
-            overflow: hidden;
+            overflow: visible;
           }
     }
+}
+
 
