--- a/portfolio/Barbershop/app/css/invest.css
+++ b/portfolio/Barbershop/app/css/invest.css
@@ -304,7 +304,9 @@
   html {
     min-height: 568px; }
   body {
-    height: 100%; } }
+    height: 100%; }
+  #home .container .content .center_section .center_item p .last {
+    padding-top: 0.05em; } }
 
 @media screen and (max-width: 567px) and (max-height: 700px) {
   body {
